force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <description>Represents an approved and disbursed loan</description>
    <label>Loan</label>
    <nameField>
        <displayFormat>LOAN-{0000000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>