force-app/main/default/objects/Loan__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>Current outstanding balance of the loan</description>
    <inlineHelpText>Enter the current outstanding balance of the loan</inlineHelpText>
    <label>Current Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>