force-app/main/default/objects/Loan__c/fields/Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Date__c</fullName>
    <description>Date when the loan funds were disbursed</description>
    <inlineHelpText>Enter the date when the loan funds were disbursed</inlineHelpText>
    <label>Disbursement Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>