force-app/main/default/objects/Loan__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Loan Application that originated this loan</description>
    <inlineHelpText>Select the loan application that originated this loan</inlineHelpText>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>