force-app/main/default/objects/Loan__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <description>Date when the loan reaches maturity</description>
    <inlineHelpText>Enter the date when this loan reaches maturity</inlineHelpText>
    <label>Maturity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>