force-app/main/default/objects/Loan__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <description>Payment schedule for the loan</description>
    <inlineHelpText>Select the payment schedule for this loan</inlineHelpText>
    <label>Payment Schedule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>