force-app/main/default/objects/Loan__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <description>Original principal amount of the loan</description>
    <inlineHelpText>Enter the original principal amount of the loan</inlineHelpText>
    <label>Principal Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>