force-app/main/default/objects/Loan__c/validationRules/Balance_Not_Exceed_Principal.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_Not_Exceed_Principal</fullName>
    <active>true</active>
    <description>Ensures current balance does not exceed principal amount</description>
    <errorConditionFormula>Current_Balance__c &gt; Principal_Amount__c</errorConditionFormula>
    <errorDisplayField>Current_Balance__c</errorDisplayField>
    <errorMessage>Current balance cannot exceed the original principal amount</errorMessage>
</ValidationRule>