force-app/main/default/objects/Loan__c/validationRules/Disbursement_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Disbursement_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensures disbursement date cannot be in the future</description>
    <errorConditionFormula>Disbursement_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Disbursement_Date__c</errorDisplayField>
    <errorMessage>Disbursement date cannot be in the future</errorMessage>
</ValidationRule>