force-app/main/default/objects/Loan__c/validationRules/Maturity_Date_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Maturity_Date_Logic</fullName>
    <active>true</active>
    <description>Ensures maturity date is after disbursement date</description>
    <errorConditionFormula>Maturity_Date__c &lt;= Disbursement_Date__c</errorConditionFormula>
    <errorDisplayField>Maturity_Date__c</errorDisplayField>
    <errorMessage>Maturity date must be after disbursement date</errorMessage>
</ValidationRule>