force-app/main/default/objects/Loan__c/validationRules/Principal_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Principal_Positive</fullName>
    <active>true</active>
    <description>Ensures principal amount is greater than 0</description>
    <errorConditionFormula>Principal_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Principal_Amount__c</errorDisplayField>
    <errorMessage>Principal amount must be greater than $0</errorMessage>
</ValidationRule>